--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-loader": "^2.4.7",
     "react-three-fiber": "^4.0.21",
     "three": "^0.114.0"
   },
