--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-loader": "^2.4.7",
+    "react-spring": "^8.0.27",
     "react-three-fiber": "^4.0.21",
     "three": "^0.114.0"
   },
