--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-sharp": "^2.4.13",
     "gatsby-source-filesystem": "^2.1.56",
     "gatsby-transformer-sharp": "^2.3.19",
+    "novelcovid": "^1.0.7-b3",
     "prop-types": "^15.7.2",
     "pusher-js": "^5.1.1",
     "react": "^16.12.0",
