--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "dependencies": {
     "d3-scale": "^3.2.1",
     "gatsby": "^2.19.45",
-    "gatsby-background-image": "^0.10.2",
     "gatsby-image": "^2.2.44",
     "gatsby-plugin-google-analytics": "^2.2.0",
     "gatsby-plugin-manifest": "^2.2.48",
@@ -23,9 +22,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-loader": "^2.4.7",
-    "react-spring": "^8.0.27",
-    "react-three-fiber": "^4.0.21",
-    "three": "^0.114.0"
+    "react-spring": "^8.0.27"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
