--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-loader": "^2.4.7",
-    "react-spring": "^8.0.27"
+    "react-spring": "^8.0.27",
+    "react-three-fiber": "^4.0.23",
+    "three": "^0.115.0"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
