--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-loader": "^2.4.7",
     "react-spring": "^8.0.27",
     "react-three-fiber": "^4.0.23",
+    "react-zoom-pan-pinch": "^1.6.1",
+    "styled-components": "^5.0.1",
     "three": "^0.115.0"
   },
   "devDependencies": {
