--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-loader": "^2.4.7",
+    "react-select": "^3.1.0",
     "react-spring": "^8.0.27",
     "react-three-fiber": "^4.0.23",
     "react-zoom-pan-pinch": "^1.6.1",
