--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@rehooks/component-size": "^1.0.3",
     "babel-plugin-styled-components": "^1.10.7",
     "d3-scale": "^3.2.1",
     "gatsby": "^2.19.45",
@@ -30,6 +31,7 @@
     "react-spring": "^8.0.27",
     "react-three-fiber": "^4.0.23",
     "react-zoom-pan-pinch": "^1.6.1",
+    "resize-observer-polyfill": "^1.5.1",
     "styled-components": "^5.0.1",
     "three": "^0.115.0"
   },
